# youtube-whitepapers

./: .gitignore  .markdownlintignore  CLAUDE.md  CLAUDE.md.template  README.md  claude-md-best-practices.md  generate-prompt.py  mise.toml  notebooklm-automator-plan.md  pyproject.toml  transcribe.sh
.claude/: settings.local.json
.claude/commands/: download-papers.md  generate-slides.md  generate-thumbnails.md  generate-video.md
.github/workflows/: ci.yml
future/: future-template.md  groundbreaking-database-papers.md  groundbreaking-languages-papers.md  groundbreaking-networking-papers.md  groundbreaking-systems-papers.md  groundbreaking-virtualization-papers.md  security-papers.md
notebooklm-automator/: .env.example  .gitignore  README.md  mise.toml  pyproject.toml
notebooklm-automator/src/: __init__.py  audio.py  browser.py  cli.py  config.py  notebook.py  slides.py  sources.py  ui_selectors.py
notebooklm-automator/tests/: __init__.py
scripts/: analyze_transcript.py  archive_episode.py  compress_images.py  download_papers.py  fetch_youtube_urls.py  generate_concat.py  generate_prompt.py  generate_status.py  generate_video.py  prepare_slides.py  publish_youtube.py  rename_audio.py  rename_slides.py  rename_thumbnails.py  status_utils.py  transcribe.py  upload_youtube.py  verify_concat.py  verify_video.py  youtube_config.py
scripts/tests/: conftest.py  test_analyze_transcript.py  test_archive_episode.py  test_compress_images.py  test_generate_concat.py  test_generate_status.py  test_generate_video.py  test_prepare_slides.py  test_publish_youtube.py  test_status_utils.py  test_upload_youtube.py  test_verify_concat.py
tests/: test_compress_images.py  test_generate_prompt.py  test_generate_video.py  test_prepare_slides.py  test_transcribe.py  test_verify_concat.py  test_verify_video.py
whitepapers/: status.json
youtube/: 01-concat.txt  01-slide-timing.txt  config.json
youtube/output/: 01-attention-is-all-you-need-metadata.txt  02-gpt-concat.txt  02-gpt-metadata.txt  03-bert-concat.txt  03-bert-metadata.txt  04-gpt2-concat.txt  04-gpt2-metadata.txt  05-megatron-lm-metadata.txt  06-t5-concat.txt  06-t5-metadata.txt  07-zero-concat.txt  07-zero-metadata.txt  08-scaling-laws-concat.txt  08-scaling-laws-metadata.txt  09-gpt3-metadata.txt  10-switch-transformers-concat.txt  10-switch-transformers-metadata.txt  11-codex-concat.txt  11-codex-metadata.txt  12-foundation-models-concat.txt  12-foundation-models-metadata.txt  13-flan-concat.txt  13-flan-metadata.txt  14-t0-concat.txt  14-t0-metadata.txt  15-glam-metadata.txt  16-webgpt-concat.txt  16-webgpt-metadata.txt  17-retro-concat.txt  17-retro-metadata.txt  18-gopher-concat.txt  18-gopher-metadata.txt  19-chain-of-thought-concat.txt  19-chain-of-thought-metadata.txt  20-lamda-concat.txt  20-lamda-metadata.txt  21-minerva-concat.txt  21-minerva-metadata.txt  22-megatron-turing-concat.txt  22-megatron-turing-metadata.txt  (+15 more)
youtube/pl/transcripts/: 01-attention-is-all-you-need.json  02-gpt.json  03-bert.json  04-gpt2.json  05-megatron-lm.json  06-t5.json  07-zero.json  08-scaling-laws.json  09-gpt3.json  10-switch-transformers.json  11-codex.json  12-foundation-models.json  13-flan.json  14-t0.json  15-glam.json  16-webgpt.json  17-retro.json  18-gopher.json  19-chain-of-thought.json  20-lamda.json  21-minerva.json  22-megatron-turing.json  23-instructgpt.json  24-palm.json  25-chinchilla.json  26-opt.json  27-uL2.json  28-emergent-abilities.json  29-big-bench.json  30-metalm.json  31-sparrow.json  32-flan-t5.json  33-glm-130b.json  34-helm.json  35-bloom.json  36-galactica.json  37-opt-iml.json  38-flan-collection.json  39-llama.json  40-kosmos-1.json  (+45 more)
youtube/prompts/: generate-podcast.md  generate-slides-command.md  generate-video-command.md  notebooklm-research-paper-podcast.md  outro-slide.md
youtube/prompts/slides/: 01-attention-is-all-you-need.md  02-gpt.md  03-bert.md  04-gpt2.md  05-megatron-lm.md  06-t5.md  07-zero.md  08-scaling-laws.md  09-gpt3.md  10-switch-transformers.md  100-flink.md  101-sinfonia.md  102-bitcoin.md  103-ethereum.md  104-hotstuff.md  105-tendermint.md  106-bitcoin-ng.md  107-ouroboros.md  108-life-beyond-transactions.md  109-harvest-yield.md  11-codex.md  110-note-distributed-computing.md  111-quicksand.md  112-sel4.md  113-paxos-live.md  114-mencius.md  115-f1.md  116-mesa.md  117-shannon-secrecy-systems.md  118-diffie-hellman.md  119-rsa.md  12-foundation-models-slides.md  120-zero-knowledge-proofs.md  121-random-oracles.md  122-yao-garbled-circuits.md  123-fully-homomorphic-encryption.md  124-ware-report.md  125-anderson-report.md  126-bell-lapadula.md  127-biba.md  (+142 more)
youtube/prompts/thumbnails/: 01-attention-is-all-you-need-thumbnail.md  02-gpt-thumbnail.md  03-bert-thumbnail.md  04-gpt2-thumbnail.md  05-megatron-lm-thumbnail.md  06-t5-thumbnail.md  07-zero-thumbnail.md  08-scaling-laws-thumbnail.md  09-gpt3-thumbnail.md  10-switch-transformers-thumbnail.md  100-flink-thumbnail.md  101-sinfonia-thumbnail.md  102-bitcoin-thumbnail.md  103-ethereum-thumbnail.md  104-hotstuff-thumbnail.md  105-tendermint-thumbnail.md  106-bitcoin-ng-thumbnail.md  107-ouroboros-thumbnail.md  108-life-beyond-transactions-thumbnail.md  109-harvest-yield-thumbnail.md  11-codex-thumbnail.md  110-note-distributed-computing-thumbnail.md  111-quicksand-thumbnail.md  112-sel4-thumbnail.md  113-paxos-live-thumbnail.md  114-mencius-thumbnail.md  115-f1-thumbnail.md  116-mesa-thumbnail.md  117-shannon-secrecy-systems-thumbnail.md  118-diffie-hellman-thumbnail.md  (+205 more)
(+15 files in other folders)
